--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -29,6 +30,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0"
   }
 }
